--- a/Requirements.txt
+++ b/Requirements.txt
@@ -4,15 +4,20 @@ beautifulsoup4==4.9.3
 black==21.7b0
 click==8.0.1
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.2.4
 django-bootstrap-v5==1.0.4
+django-heroku==0.3.1
 djongo==1.3.6
+gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==8.2.0
+psycopg2==2.9.1
 pymongo==3.12.0
 pytz==2021.1
 regex==2021.7.6
 soupsieve==2.2.1
 sqlparse==0.2.4
 tomli==1.0.4
+whitenoise==5.3.0
